--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 
 <html>
-<h1>Artist's Name Here</h1>
+<head>
+<body>
+  <title>Artist</title>
+  </head>
 <h2>Bio</h2>
 <p>
 <h3>Artists Bio</h3>
 </p>
-
+</body>
 
 
 
