--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 
 <html>
-<head>
-<body>
+<head>  
   <title>Artist</title>
-  </head>
-<h2>Bio</h2>
-<p>
-<h3>Artists Bio</h3>
+</head>
+<body scr="img_dog.jpg> 
+  <h1 style="font-size:70xp;">Bio</h1>
+  <h2 style="font-color:Blue;">Artists Bio</h2>
 </p>
+  
 </body>
-
+  
 
 </html>
