--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>  
   <title>Artist</title>
 </head>
-<body scr="img_dog.jpg> 
+<body scr="img_dog.jpg" alt="Dog"> 
   <h1 style="font-size:70xp;">Bio</h1>
   <h2 style="font-color:Blue;">Artists Bio</h2>
 </p>
