--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body scr="img_dog.jpg" alt="Dog"> 
   <h1 style="font-size:70xp;">Bio</h1>
   <h2 style="font-color:Blue;">Artists Bio</h2>
+<p> 
+  The Artist is a wonderul Artist they have really good song!
 </p>
   
 </body>
