--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>  
-  <title>Artist</title>
+  <title>All About The Musician</title>
 </head>
 <body scr="img_dog.jpg" alt="Dog"> 
   <h1 style="font-size:70xp;">Bio</h1>
