--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 
 <html>
-<head>  
-  <title>All About The Musician</title>
-</head>
-<body scr="img_dog.jpg" alt="Dog"> 
-  <h1 style="font-size:70xp;">Bio</h1>
-  <h2 style="font-color:Blue;">Artists Bio</h2>
-<p> 
-  The Artist is a wonderul Artist they have really good song!
-</p>
   
-</body>
+ <head>  
+  <title>All About The Musician</title>
+ </head>
+ <body scr="img_dog.jpg" alt="Dog"> 
+  <h1 style="font-size:70xp;">Artist' Name Here</h1>
+  <h2 style="background-color:Blue;">Bio</h2>
+  <p> 
+   The Artist is a wonderful Artist they have really good songs, I recommend everyone to hear their songs!
+  </p>
+  
+ </body>
   
 
 </html>
