--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
  <body scr="img_dog.jpg" alt="Dog"> 
   <h1 style="font-size:70xp;">Artist' Name Here</h1>
   <h2 style="background-color:Blue;">Bio</h2>
+  <style>
+    h1 {color:Blue;}
+    h2{color:White;}
+  </style>  
   <p> 
    The Artist is a wonderful Artist they have really good songs, I recommend everyone to hear their songs!
   </p>
