--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>All About The Musician</title>
  </head>
  <body scr="img_dog.jpg" alt="Dog"> 
-  <h1 style="font-size:70xp;">Artist' Name Here</h1>
+  <h1 style="font-size:70xp;">Artist's Name Here</h1>
   <h2 style="background-color:Blue;">Bio</h2>
   <style>
     h1 {color:Blue;}
