--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1 style="font-size:70xp;">Artist's Name Here</h1>
   <h2 style="background-color:Blue;">Bio</h2>
   <style>
+    body{background-color:powderred;}
     h1 {color:Blue;}
     h2{color:White;}
   </style>  
