--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
  <head>  
   <title>All About The Musician</title>
  </head>
- <body scr="img_dog.jpg" alt="Dog"> 
+ <body> 
   <h1 style="font-size:70xp;">Artist's Name Here</h1>
-  <h2 style="background-color:Blue;">Bio</h2>
+  <h2 style="background-color:cyan;">Bio</h2>
   <style>
-    body{background-color:powderred;}
-    h1 {color:Blue;}
+    body{background-color:red;}
+    h1{color:Blue;}
     h2{color:White;}
   </style>  
   <p> 
