--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
  <head>  
   <title>All About The Musician</title>
  </head>
- <body> 
-  <h1 style="font-size:70xp;">Artist's Name Here</h1>
-  <h2 style="background-color:cyan;">Bio</h2>
+ <body style="backgroud-color:Red;"> 
+  <h1>Artist's Name Here</h1>
+  <h2>Bio</h2>
   <style>
-    body{background-color:red;}
     h1{color:Blue;}
-    h2{color:White;}
+    h2{color:White;background-color:Cyan;}
   </style>  
   <p> 
    The Artist is a wonderful Artist they have really good songs, I recommend everyone to hear their songs!
