--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <head>  
   <title>All About The Musician</title>
  </head>
- <body style="backgroud-color:LightBlue;"> 
+ <body style="backgroud-color:Teal;"> 
   <h1>Artist's Name Here</h1>
   <h2>Bio</h2>
   <style>
