--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
  <head>  
   <title>All About The Musician</title>
  </head>
- <body style="backgroud-color:Teal;"> 
+ <body style="backgroud-color:Tomato;"> 
   <h1>Artist's Name Here</h1>
   <h2>Bio</h2>
   <style>
     h1{color:Blue;}
-    h2{color:White;background-color:Black;}
+    h2{color:White;border-color:Cyan;border:5px;}
   </style>  
   <p> 
    The Artist is a wonderful Artist they have really good songs, I recommend everyone to hear their songs!
