--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Bio</h2>
   <style>
     h1{color:Blue;}
-    h2{color:White;border:5px solid Cyan;}
+    h2{color:Black;border:5px solid Cyan;}
   </style>  
   <p> 
    The Artist is a wonderful Artist they have really good songs, I recommend everyone to hear their songs!
