--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <html>
   
  <head>  
-  <title>All About The Musician</title>
+  <title>Home Page</title>
  </head>
+  <header>Artist</header>
+  <section>
+  <nav>
+   <ul>
+     <li><a href="#">Shop</a></li> 
+   </ul>
+  </nav>
+  </section>
  <body style="backgroud-color:Tomato;"> 
-  <h1>Artist's Name Here</h1>
-  <h2>Bio</h2>
+  <h1>Artist's Name Here
+   </h1>
+  
   <style>
     h1{color:Blue;}
     h2{color:Black;border:5px solid Cyan;}
   </style>  
   <p> 
-   The Artist is a wonderful Artist they have really good songs, I recommend everyone to hear their songs!
   </p>
   
  </body>
