--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <section>
   <nav>
    <ul>
-     <li><a href="#">Shop</a></li> 
+     <li><a href="/shop.html">Shop</a></li> 
+     <style>
+       nav{backgroug-color:tomato;float:Right;}
    </ul>
   </nav>
   </section>
- <body style="backgroud-color:Tomato;"> 
+ <body> 
   <h1>Artist's Name Here
    </h1>
   
