--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
    <ul>
      <li><a href="/shop.html">Shop</a></li> 
      <style>
-       nav{backgroug-color:tomato;float:Right;}
+       nav ul{list-style-type:none;text-align:center;}
+       header{color:blue;}
+       nav{background-color:tomato;float:Right;}
    </ul>
   </nav>
   </section>
