--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
    <ul>
      <li><a href="/shop.html">Shop</a></li> 
      <style>
+       header{font-size:40px;text-align:center;}
        nav ul{list-style-type:none;text-align:center;}
        header{color:blue;}
-       nav{background-color:tomato;float:Right;}
+       nav{float:left;padding:20%;text-align:center;}
    </ul>
   </nav>
   </section>
