--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        header{font-size:40px;text-align:center;}
        nav ul{list-style-type:none;text-align:center;}
        header{color:blue;}
-       nav{float:left;padding:20%;text-align:center;}
+       nav{padding:20%;text-align:center;}
    </ul>
   </nav>
   </section>
