--- a/index.html
+++ b/index.html
@@ -11,21 +11,14 @@
    <ul>
      <li><a href="/shop.html">Shop</a></li> 
      <style>
-       header{font-size:40px;text-align:center;}
-       nav ul{list-style-type:none;text-align:center;}
-       header{color:blue;}
+       header{color:blue;font-size:40px;text-align:center;}
+       nav ul{list-style-type:ol;}
        nav{padding:20%;text-align:center;}
    </ul>
   </nav>
   </section>
  <body> 
-  <h1>Artist's Name Here
-   </h1>
-  
-  <style>
-    h1{color:Blue;}
-    h2{color:Black;border:5px solid Cyan;}
-  </style>  
+    
   <p> 
   </p>
   
