--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <style>
        header{color:blue;font-size:40px;text-align:center;}
        nav ul{list-style-type:ol;}
-       nav{padding:20%;text-align:center;}
+       nav{padding:20%;text-align:Left;}
    </ul>
   </nav>
   </section>
