--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <style>
        header{color:blue;font-size:40px;text-align:center;}
        nav ul{list-style-type:ol;}
-       nav{padding:20%;text-align:Left;}
+       nav{float:left;width:30%;height:20px;background:gray;padding:20px;}
    </ul>
   </nav>
   </section>
