--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <style>
        header{color:blue;font-size:40px;text-align:center;}
        nav ul{list-style-type:ol;}
-       nav{float:Center;width:10%;height:20px-border-color:gray;border:10px;padding:20px;}
+       nav{float:Center;width:10%;height:20px;border-color:gray;border-size:10px;padding:20px;}
    </ul>
   </nav>
   </section>
