--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
        header{color:blue;font-size:40px;text-align:center;}
        nav ul{list-style-type:ol;}
        nav{float:Center;width:10%;height:20px;border-color:gray;border-size:10px;padding:20px;}
+     </style>
    </ul>
   </nav>
   </section>
