--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
   <section>
   <nav>
    <ul>
-     <li><a href="/shop.html">Shop</a></li> 
-     <style>
-       header{color:blue;font-size:40px;text-align:center;}
-       nav ul{list-style-type:ol;}
-       nav{float:Center;width:10%;height:20px;border-color:gray;border-size:10px;padding:20px;}
-     </style>
-   </ul>
+     <li><a href="/shop.html">Shop</a></li>
+     
+     <li><a>All About Me</a>
+         <ul>
+            <li><a>Firtst Album</a></li>
+            <li><a>Where and When I was Born</a></li>
+            <li><a>First Song</a></li>
+         </ul>
+     </li>
+     <li><a>Shop</a>
+         <ul>
+            <li><a>Albums</a></li>
+            <li><a>Merch</a></li>
+            <li><a>Songs</a></li>
+         </ul>
+     <li><a>Events</a>
+         <ul>
+           <li><a>Concerts</a></li>
+         </ul>
   </nav>
   </section>
  <body> 
