--- a/shop.html
+++ b/shop.html
@@ -47,14 +47,32 @@
 
 <div class="box-9">
 
-</div><div class="box-10">
+</div>
+  
+<div class="box-10">
 
-</div><div class="box-11">
+</div>
+  
+<div class="box-11">
 
 </div>
 
 /* INSERT FOOTER HERE */
-
+<footer>
+  
+ <li> <a href=" "> Home</a></li>   /*INSERT ALL OF THE LINKS */
+  
+ <li> <a href=" "> Home</a></li>
+  
+ <li> <a href=" "> Home</a></li>
+  
+ <li> <a href=" "> Home</a></li>
+  
+ <li> <a href=" "> Home</a></li>
+ 
+   © SCITECH TSA 2019
+   <a class="white-text position-center">Chapter ID: </a> /* INSERT THE CHAPTER ID HERE */
+  </footer>
 </body>
 
 </html>
