--- a/shop.html
+++ b/shop.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Official Shop</title>
 <link href=" " rel="stylesheet" type="text/css"> /*INSERT CSS FILE HERE*/
 </head>
