--- a/shop.html
+++ b/shop.html
@@ -11,53 +11,59 @@
 <body>
 /* INSERT NAV BAR HERE */
 
-<section id="section-a">
-
-
-<div class="box-1">
+<div class="grid">
+<div class="header">
 
 </div>
 
-<div class="box-2">
+<div class="menu">
 
 </div>
 
-<div class="box-3">
-
-</div>
-
-<div class="box-4">
-
-</div>
-
-<div class="box-5">
-
-</div>
-
-<div class="box-6">
-
-</div>
-
-<div class="box-7">
-
-</div>
-
-<div class="box-8">
-
-</div>
-
-<div class="box-9">
+<div class="banner">
 
 </div>
   
-<div class="box-10">
+<div class="album 1">
+
+</div>
+
+<div class="album 2">
 
 </div>
   
-<div class="box-11">
+<div class="tickets">
 
 </div>
 
+<div class="shirts">
+
+</div>
+
+<div class="necklaces">
+
+</div>
+
+<div class="bracelets">
+
+</div>
+
+<div class="lightsticks">
+
+</div>
+
+<div class="posters">
+
+</div>
+  
+<div class="sold out">
+
+</div>
+  
+<div class="limited edition">
+
+</div>
+  </div>
 /* INSERT FOOTER HERE */
 <footer>
   
