--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
             <li><a>First Song</a></li>
          </ul>
      </li>
-     <li><a>Shop</a>
-         <ul>
-            <li><a>Albums</a></li>
-            <li><a>Merch</a></li>
-            <li><a>Songs</a></li>
-         </ul>
+     <li><a href="Shop.html">Shop</a>
      <li><a>Events</a>
          <ul>
            <li><a>Concerts</a></li>
