--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a>First Song</a></li>
          </ul>
      </li>
-     <li><a href="Shop.html">Shop</a>
+     <li><a href="shop.html">Shop</a>
      <li><a>Events</a>
          <ul>
            <li><a>Concerts</a></li>
