--- a/index.html
+++ b/index.html
@@ -7,18 +7,11 @@
  </head>
   <header>Artist</header>
      <ul>
-     <li><a>All About Me</a>
-         <ul>
-            <li><a>Firtst Album</a></li>
-            <li><a>Where and When I was Born</a></li>
-            <li><a>First Song</a></li>
-         </ul>
+     <li><a href="bio.html">All About Me</a>
      </li>
      <li><a href="shop.html">Shop</a>
-     <li><a>Events</a>
-         <ul>
-           <li><a>Concerts</a></li>
-         </ul>
+     <li><a href="events.html">Events</a>
+
  <body> 
     
   <p> 
