--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 
 <html>
  <link href='style.css' rel='stylesheet'>
+<body href='trump.jpg'> 
  <head>  
   <title>Home Page</title>
  </head>
   <header>Artist</header>
-     <ul>
-     <li><a href="bio.html">All About Me</a>
+  
+ <style>
+  header{float:center;color:blue;}
+  
+     
+     <li><a href="bio.html">Artist's Bio</a>
      </li>
      <li><a href="shop.html">Shop</a>
      <li><a href="events.html">Events</a>
 
- <body> 
     
   <p> 
   </p>
