--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
  <link href='style.css' rel='stylesheet'>
-<body href='trump.jpg'> 
+
  <head>  
   <title>Home Page</title>
  </head>
@@ -17,7 +17,8 @@
      <li><a href="shop.html">Shop</a>
      <li><a href="events.html">Events</a>
      </ul>
-    
+  
+ <body>
   <p> 
   </p>
   
