--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
   header{float:center;color:blue;}
   
      <ul>
-     <li><a href="bio.html">Artist's Bio</a>
-     </li>
-     <li><a href="shop.html">Shop</a>
-     </li>
-     <li><a href="events.html">Events</a>
-     </li>
-     </ul>
+     <li><a>All About Me</a>
+         <ul>
+            <li><a>Firtst Album</a></li>
+             <li><a>Where and When I was Born</a></li>
+             <li><a>First Song</a></li>
+          </ul>
+      </li>
+      <li><a>Shop</a>
+          <ul>
+             <li><a>Albums</a></li>
+             <li><a>Merch</a></li>
+             <li><a>Songs</a></li>
+          </ul>
+      <li><a>Events</a>
+         <ul>
+           <li><a>Concerts</a></li>
+         </ul>
   
  <body>
   <p> 
