--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
  <style>
   header{float:center;color:blue;}
-  
+  <nav>
      <ul>
      <li><a>All About Me</a>
          <ul>
@@ -29,7 +29,7 @@
          <ul>
            <li><a>Concerts</a></li>
          </ul>
-  
+ </nav>
  <body>
   <p> 
   </p>
