--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
-<!doctype html>
-
-<html>
- <link href='style.css' rel='stylesheet'>
-
- <head>  
-  <title>Home Page</title>
- </head>
-  <header>Artist</header>
-  
- <style>
-  header{float:center;color:blue;}
-  <nav>
-     <ul>
-     <li><a>All About Me</a>
-         <ul>
-            <li><a>Firtst Album</a></li>
-             <li><a>Where and When I was Born</a></li>
-             <li><a>First Song</a></li>
-          </ul>
-      </li>
-      <li><a>Shop</a>
+ <!doctype html>
+ 
+ <html>
+  <link href='style.css' rel='stylesheet'>
+  <head>  
+   <title>Home Page</title>
+  </head>
+   <header>Artist</header>
+      <ul>
+      <li><a>All About Me</a>
           <ul>
-             <li><a>Albums</a></li>
-             <li><a>Merch</a></li>
-             <li><a>Songs</a></li>
-          </ul>
-      <li><a>Events</a>
+             <li><a>Firtst Album</a></li>
+             <li><a>Where and When I was Born</a></li>
+            <li><a>First Song</a></li>
+         </ul>
+     </li>
+     <li><a>Shop</a>
+         <ul>
+            <li><a>Albums</a></li>
+            <li><a>Merch</a></li>
+            <li><a>Songs</a></li>
+         </ul>
+     <li><a href="Shop.html">Shop</a>
+     <li><a>Events</a>
          <ul>
            <li><a>Concerts</a></li>
-         </ul>
- </nav>
- <body>
-  <p> 
-  </p>
-  
- </body>
-  
-
-</html>
+          </ul>
+  <body> 
+     
+   <p> 
+   </p>
+   
+  </body>
+   
+ 
+ </html>
