--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <head>  
    <title>Home Page</title>
   </head>
-   <header>Artist</header>
+   <header style="color:blue;float:center;">Artist</header>
       <ul>
-      <li><a>All About Me</a>
+      <li><a href="bio.html">Bio</a>
 
      </li>
        
          
-     <li><a href="Shop.html">Shop</a>
+     <li><a href="shop.html">Shop</a>
        </li>
-     <li><a>Events</a>
+     <li><a href="events.html">Events</a>
        </li>
   </ul>
   <body> 
