--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
    <title>Home Page</title>
   </head>
    <header style="color:blue;float:center;">Artist</header>
+  </head>
+<style>header {
+    background-color:Orange;
+    padding:30px;
+    text-align:center;
+    font-size:35px;
+    color: Blue;
+}
+</style> 
       <ul>
       <li><a href="bio.html">Bio</a>
 
