--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <head>  
    <title>Home Page</title>
   </head>
-   <header style="color:blue;float:center;">Artist</header>
-  </head>
-<style>header {
-    background-color:Orange;
+   <header style="color:blue;">Artist</header>
+  
+<style>
+ header {
+    background-color:green;
+    opacity:.8;
     padding:30px;
     text-align:center;
     font-size:35px;
