--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 </style> 
       <ul>
       <li><a href="bio.html">Bio</a>
-
-     </li>
-       
-         
+       </li>
      <li><a href="shop.html">Shop</a>
        </li>
      <li><a href="events.html">Events</a>
+       </li>
+     <li><a href="help.html">Help</a>
        </li>
   </ul>
   <body> 
