--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body> 
+  <body background="trump.jpg"> 
      
    <p> 
    </p>
