--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     font-size:35px;
     color: Blue;
 }
+ body, html {
+    height: 100%;
+    margin: 0;
+ }
+ .bg {
+    height: 50%; 
+ }
 </style> 
       <ul>
       <li><a href="bio.html">Bio</a>
