--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
        </li>
      <li><a href="shop.html">Shop</a>
        </li>
+       <li><a href="songs.html">Songs</a>
      <li><a href="events.html">Events</a>
        </li>
      <li><a href="help.html">Help</a>
