--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="<"https://cafebiz.cafebizcdn.vn/2017/photo-7-1486717499461.gif"> 
+  <body background="<https://cafebiz.cafebizcdn.vn/2017/photo-7-1486717499461.gif>" 
      
    <p> 
    </p>
