--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     margin: 0;
  }
  .bg {
-    background-image:url("trump.jpg");
+    background-image:url("https://cafebiz.cafebizcdn.vn/2017/photo-7-1486717499461.gif");
     height: 50%; 
  }
 </style> 
