--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     margin: 0;
  }
  .bg {
-    background-image:url("https://cafebiz.cafebizcdn.vn/2017/photo-7-1486717499461.gif");
+    background-image:url("trump.jpg");
     height: 50%; 
  }
 </style> 
@@ -35,7 +35,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="https://cafebiz.cafebizcdn.vn/2017/photo-7-1486717499461.gif"> 
+  <body background="trump.jpg"> 
      
    <p> 
    </p>
