--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     opacity:.8;
     padding:0px;
     text-align:center;
-    font-size:20px;
+    font-size:36px;
     color: Blue;
 }
  body, html {
@@ -20,11 +20,11 @@
     margin: 0;
  }
  .bg {
-    background-image:url("trump.jpg");
-    height: 50%; 
+    background-image:url("dog.jpg");
+    height: 100%; 
  }
 </style> 
-      <ul>
+   <ul>
       <li><a href="bio.html">Bio</a>
        </li>
      <li><a href="shop.html">Shop</a>
