--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="trump.jpg"> 
+  <body background="dog.jpg"> 
      
    <p> 
    </p>
