--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     margin: 0;
  }
  .bg {
-    background-image:url("dog.jpg");
+    background-image:url("");
     height: 100%; 
  }
 </style> 
@@ -35,7 +35,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="dog.jpg"> 
+  <body background=""> 
      
    <p> 
    </p>
