--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     margin: 0;
  }
  .bg {
-    background-image:url("");
+    background-image:url("Mickey.gif.gif");
     height: 100%; 
  }
 </style> 
@@ -35,7 +35,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background=""> 
+  <body background="Mickey.gif.gif"> 
      
    <p> 
    </p>
