--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     margin: 0;
  }
  .bg {
-    background-image:url("Mickey.gif.gif");
-    height: 100%; 
+    background-image:url("mickey.gif");
+    height: 50%; 
  }
 </style> 
    <ul>
@@ -35,7 +35,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="Mickey.gif.gif"> 
+  <body background="mickey.gif"> 
      
    <p> 
    </p>
