--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!doctype html>
+<!doctype html>
  
  <html>
   <link href='style.css' rel='stylesheet'>
@@ -12,7 +12,7 @@
     opacity:.8;
     padding:0px;
     text-align:center;
-    font-size:36px;
+    font-size:35px;
     color: Blue;
 }
  body, html {
@@ -20,22 +20,21 @@
     margin: 0;
  }
  .bg {
-    background-image:url("mickey.gif");
+    background-image:url("mickey.jpg");
     height: 50%; 
  }
 </style> 
-   <ul>
+      <ul>
       <li><a href="bio.html">Bio</a>
        </li>
      <li><a href="shop.html">Shop</a>
        </li>
-       <li><a href="songs.html">Songs</a>
      <li><a href="events.html">Events</a>
        </li>
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="mickey.gif"> 
+  <body background="mickey.jpg"> 
      
    <p> 
    </p>
