--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
    <header style="color:blue;">Artist</header>
   
+<div class="bg-image img1"></div>
+<div class="bg-image img2"></div>
+<div class="bg-image img3"></div>
+<div class="bg-image img4"></div>
+<div class="bg-image img5"></div>
+<div class="bg-image img6"></div>
+
+<div class="bg-text">ARTIST</div>
+  
 <style>
  header {
     opacity:.8;
@@ -37,7 +46,7 @@
  .img6 { background-image: url("trumpet.gif"); }
  
  ////* Position text in the middle */
-.bg-Artist {
+.bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   color: white;
