--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     margin: 0;
   
  }
- 
+ box-sizing : border-box;
  
 
 </style> 
@@ -36,7 +36,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="mickey.jpg"> 
+  <body> 
 <div class="bg-image img1"></div>
 <div class="bg-image img2"></div>
 <div class="bg-image img3"></div>
@@ -46,7 +46,7 @@
 
 <div class="bg-text">ARTIST</div>
  
- box-sizing : border-box;
+ 
    <p> 
    </p>
    
