--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
     margin: 0;
   
  }
-
+{
  box-sizing : border-box;
+ }
+.img1 { background-image: url("mickey.gif"); }
+.img2 { background-image: url("minnie.gif"); 
+.img3 { background-image: url("dance.gif"); }
+.img4 { background-image: url("bird.gif"); }
+.img5 { background-image: url("depression.gif"); }
+.img6 { background-image: url("trumpet.gif"); }
  
-
+ 
 </style> 
       <ul>
       <li><a href="bio.html">Bio</a>
