--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     margin: 0;
  }
  .bg {
-    background-image:url("mickey.jpg");
+    background-image:url("mickey.gif");
     height: 50%; 
  }
 </style> 
@@ -34,7 +34,7 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="mickey.jpg"> 
+  <body background="mickey.gif"> 
      
    <p> 
    </p>
