--- a/index.html
+++ b/index.html
@@ -1,30 +1,60 @@
 <!doctype html>
  
  <html>
-  <link href='style.css' rel='stylesheet'>
+  
   <head>  
    <title>Home Page</title>
-  </head>
-   <header style="color:blue;">Artist</header>
+    <link href='style.css' rel='stylesheet'>
+   </head>
+ 
   
 <style>
- header {
-    opacity:.8;
-    padding:0px;
-    text-align:center;
-    font-size:50px;
-    color: Blue;
-}
+ 
  body, html {
     height: 100%;
     margin: 0;
+  
  }
- .bg {
-    background-image:url("mickey.gif");
-    height: 50%; 
+{
+ box-sizing : border-box;
  }
-</style> 
-      <ul>
+.img1 { background-image: url("mickey.gif"); }
+.img2 { background-image: url("minnie.gif"); 
+.img3 { background-image: url("dance.gif"); }
+.img4 { background-image: url("bird.gif"); }
+.img5 { background-image: url("depression.gif"); }
+.img6 { background-image: url("trumpet.gif"); }
+ 
+.bg-image {
+  //* Full height */
+  height: 50%; 
+  ////* Center and scale*/
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+ 
+ 
+ ////* Position text in the middle */
+  .bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  font-size: 80px;
+  border: 10px solid #f1f1f1;
+  position: fixed; ///* Stay fixed */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 300px;
+  padding: 20px;
+  text-align: center;
+}
+
+</style>
+<ul>
       <li><a href="bio.html">Bio</a>
        </li>
      <li><a href="shop.html">Shop</a>
@@ -34,15 +64,18 @@
      <li><a href="help.html">Help</a>
        </li>
   </ul>
-  <body background="mickey.gif"> 
-     
-   <p> 
-   </p>
-   
-   <footer>
-    
-   </footer>
-  </body>
-   
- 
- </html>
+
+</head>
+<body>
+
+<div class="bg-image img1"></div>
+<div class="bg-image img2"></div>
+<div class="bg-image img3"></div>
+<div class="bg-image img4"></div>
+<div class="bg-image img5"></div>
+<div class="bg-image img6"></div>
+
+<div class="bg-text">Artist</div>
+
+</body>
+</html>
