--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 {
  box-sizing : border-box;
 .bg {
-
-
-.img1 { background-image: url("trumpet.gif"); }
+background-image: url("trumpet.gif"); }
  
 .bg-image {
   //* Full height */
