--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 {
  box-sizing : border-box;
 .bg {
-background-image: url("trumpet.gif"); }
+.img1 { background-image: url("mickey.gif"); }
+.img2 { background-image: url("minnie.gif"); 
+.img3 { background-image: url("dance.gif"); }
+.img4 { background-image: url("bird.gif"); }
+.img5 { background-image: url("depression.gif"); }
+.img6 { background-image: url("trumpet.gif"); }
+
  
 .bg-image {
   //* Full height */
