--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 {
  box-sizing : border-box;
 .bg {
-.img1 { background-image: url("mickey.gif"); }
-.img2 { background-image: url("minnie.gif"); 
-.img3 { background-image: url("dance.gif"); }
-.img4 { background-image: url("bird.gif"); }
-.img5 { background-image: url("depression.gif"); }
-.img6 { background-image: url("trumpet.gif"); }
+background-image: url("mickey.gif"); }
+background-image: url("minnie.gif"); 
+background-image: url("dance.gif"); }
+background-image: url("bird.gif"); }
+background-image: url("depression.gif"); }
+background-image: url("trumpet.gif"); }
 
  
 .bg-image {
