--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ background-image: url("trumpet.gif"); }
        </li>
      <li><a href="shop.html">Shop</a>
        </li>
+     <li><a href="TRAIL !@.html">TRAIL !@</a>
+       </li>
      <li><a href="events.html">Events</a>
        </li>
      <li><a href="help.html">Help</a>
