--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ background-image: url("trumpet.gif"); }
        </li>
      <li><a href="shop.html">Shop</a>
        </li>
-     <li><a href="TRAIL !@.html">TRAIL !@</a>
+     <li><a href="trial.html">TRAIL !@</a>
        </li>
      <li><a href="events.html">Events</a>
        </li>
