--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ background-image: url("trumpet.gif"); }
        </li>
      <li><a href="events.html">Events</a>
        </li>
+     <li><a href="songs.html">Songs</a>
+       </li>
      <li><a href="help.html">Help</a>
        </li>
   </ul>
