--- a/trial.html
+++ b/trial.html
@@ -60,6 +60,21 @@ body, html {
 <div class="bg-image img6"></div>
 
 <div class="bg-text">Artist</div>
+  
+<ul>
+      <li><a href="bio.html">Bio</a>
+       </li>
+     <li><a href="shop.html">Shop</a>
+       </li>
+     <li><a href="trial.html">TRAIL !@</a>
+       </li>
+     <li><a href="events.html">Events</a>
+       </li>
+     <li><a href="songs.html">Songs</a>
+       </li>
+     <li><a href="help.html">Help</a>
+       </li>
+  </ul>
 
 </body>
 </html>
