--- a/trial.html
+++ b/trial.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <div class="topnav" id="myTopnav">
-  <a href="bio.html" class="active">Bio</a>
+  <a href="index.html" class="active">Home</a>
   <a href="songs.html">Songs</a>
   <a href="help.html">Contact</a>
   <div class="dropdown">
@@ -15,7 +15,7 @@
       <a href="#">LOL I FELL LIKE WELL NEED THIS</a>
     </div>
   </div> 
-  <a href="#about">About</a>
+  <a href="bio.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <style>
