--- a/trial.html
+++ b/trial.html
@@ -23,6 +23,7 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 /* Style the links inside the navigation bar */
@@ -31,9 +32,9 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 50px;
+    padding: 14px 70px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 19px;
 }
 
 /* Add an active class to highlight the current page */
