--- a/index.html
+++ b/index.html
@@ -1,50 +1,162 @@
-<!doctype html>
- 
- <html>
-  
-  <head>  
-   <title>Home Page</title>
-    <link href='style.css' rel='stylesheet'>
-   </head>
- 
-  
+<DOCTYPE! html>
+<html>
+<head>
+<div class="topnav" id="myTopnav">
+  <a href="index.html" class="active">Home</a>
+  <a href="songs.html">Songs</a>
+  <a href="help.html">Contact</a>
+  <div class="dropdown">
+    <button class="dropbtn">More 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="shop.html">Shops</a>
+      <a href="events.html">Events</a>
+      <a href="#">LOL I FELL LIKE WELL NEED THIS</a>
+    </div>
+  </div> 
+  <a href="bio.html">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
 <style>
- 
- body, html {
-    height: 100%;
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.55);
+}
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 70px;
+    text-decoration: none;
+    font-size: 19px;
+}
+/* Add an active class to highlight the current page */
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+    display: none;
+}
+/* Dropdown container - needed to position the dropdown content */
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+/* Style the dropdown button to fit inside the topnav */
+.dropdown .dropbtn {
+    font-size: 19px; 
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
     margin: 0;
+}
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.55);
+    z-index: 1;
+}
+/* Style the links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+/* Add a dark background on topnav links and the dropdown button on hover */
+.topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #555;
+    color: white;
+}
+/* Add a grey background to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
   
- }
-{
- box-sizing : border-box;
-.bg {
-background-image: url("mickey.gif"); }
-background-image: url("minnie.gif"); 
-background-image: url("dance.gif"); }
-background-image: url("bird.gif"); }
-background-image: url("depression.gif"); }
-background-image: url("trumpet.gif"); }
-
- 
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica;
+}
+* {
+  box-sizing: border-box;
+}
 .bg-image {
-  //* Full height */
+  /* Full height */
   height: 50%; 
-  ////* Center and scale*/
+  
+  /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
- 
- 
- ////* Position text in the middle */
-  .bg-text {
+/* Images used */
+.img1 { background-image: url(mickey.gif); }
+.img2 { background-image: url("minnie.gif"); }
+.img3 { background-image: url("bird.gif"); }
+.img4 { background-image: url("dance.gif"); }
+.img5 { background-image: url("depression.gif"); }
+.img6 { background-image: url("trumpet.gif"); }
+/* Position text in the middle of the page/image */
+.bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   font-size: 80px;
   border: 10px solid #f1f1f1;
-  position: fixed; ///* Stay fixed */
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -53,23 +165,18 @@ background-image: url("trumpet.gif"); }
   padding: 20px;
   text-align: center;
 }
-
 </style>
-<ul>
-      <li><a href="bio.html">Bio</a>
-       </li>
-     <li><a href="shop.html">Shop</a>
-       </li>
-     <li><a href="trial.html">TRAIL !@</a>
-       </li>
-     <li><a href="events.html">Events</a>
-       </li>
-     <li><a href="songs.html">Songs</a>
-       </li>
-     <li><a href="help.html">Help</a>
-       </li>
-  </ul>
-
+<script>
+  function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+  
+  </script>
 </head>
 <body>
 
@@ -81,6 +188,8 @@ background-image: url("trumpet.gif"); }
 <div class="bg-image img6"></div>
 
 <div class="bg-text">Artist</div>
+  
+
 
 </body>
 </html>
