--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
   }
 }
   
+.box {
+  width: 150px;
+  height: 150px;
+  background: #fff;
+}  
+  
 body, html {
   height: 100%;
   margin: 0;
@@ -175,7 +181,22 @@ body, html {
         x.className = "topnav";
     }
 }
-  
+  const Box = posed.div({
+  hoverable: true,
+  pressable: true,
+  init: {
+    scale: 1,
+    boxShadow: '0px 0px 0px rgba(0,0,0,0)'
+  },
+  hover: {
+    scale: 1.2,
+    boxShadow: '0px 5px 10px rgba(0,0,0,0.2)'
+  },
+  press: {
+    scale: 1.1,
+    boxShadow: '0px 2px 5px rgba(0,0,0,0.1)'
+  }
+});
   </script>
 </head>
 <body>
