--- a/index.html
+++ b/index.html
@@ -19,6 +19,34 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <style>
+  
+  }  
+  
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica;
+}
+* {
+  box-sizing: border-box;
+}
+.bg-image {
+  /* Full height */
+  height: 50%; 
+  
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+/* Images used */
+.img1 { background-image: url(mickey.gif); }
+.img2 { background-image: url("minnie.gif"); }
+.img3 { background-image: url("bird.gif"); }
+.img4 { background-image: url("dance.gif"); }
+.img5 { background-image: url("depression.gif"); }
+.img6 { background-image: url("trumpet.gif"); }
+/* Position text in the middle of the page/image */
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
@@ -128,33 +156,8 @@
   width: 150px;
   height: 150px;
   background: #fff;
-}  
-  
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, Helvetica;
-}
-* {
-  box-sizing: border-box;
-}
-.bg-image {
-  /* Full height */
-  height: 50%; 
-  
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-/* Images used */
-.img1 { background-image: url(mickey.gif); }
-.img2 { background-image: url("minnie.gif"); }
-.img3 { background-image: url("bird.gif"); }
-.img4 { background-image: url("dance.gif"); }
-.img5 { background-image: url("depression.gif"); }
-.img6 { background-image: url("trumpet.gif"); }
-/* Position text in the middle of the page/image */
+  padding: 70px 90px;
+
 .bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
