--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="shop.html">Shops</a>
+      <a href="shop.html">Shop</a>
       <a href="events.html">Events</a>
       <a href="#">LOL I FELL LIKE WELL NEED THIS</a>
     </div>
@@ -23,7 +23,7 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.55);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.9);
 }
 /* Style the links inside the navigation bar */
 .topnav a {
@@ -66,7 +66,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.55);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
     z-index: 1;
 }
 /* Style the links inside the dropdown */
@@ -92,8 +92,8 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
+/* When the screen is less than 1000 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 1000px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
@@ -103,7 +103,7 @@
   }
 }
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
     position: absolute;
@@ -129,8 +129,9 @@ body, html {
   margin: 0;
   font-family: Arial, Helvetica;
 }
-* {
+ {
   box-sizing: border-box;
+  box-shadow: (0,0,0,0.9);
 }
 .bg-image {
   /* Full height */
@@ -151,7 +152,7 @@ body, html {
 /* Position text in the middle of the page/image */
 .bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  background-color: rgba(0,0,0, 0.6); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   font-size: 80px;
