--- a/shop.html
+++ b/shop.html
@@ -9,15 +9,14 @@
 </head>
 
 <body>
-/* INSERT NAV BAR HERE */
 
 <div class="grid">
 <div class="header">
-
+  
 </div>
 
 <div class="menu">
-
+    
 </div>
 
 <div class="banner">
@@ -25,43 +24,43 @@
 </div>
   
 <div class="album1">
-
+    	<li><a href=" "> Album</a></li>
 </div>
 
 <div class="album2">
-
+      <li><a href=" "> Album 2</a></li>
 </div>
   
 <div class="tickets">
-
+      <li><a href=" "> Tickets</a></li>
 </div>
 
 <div class="shirts">
-
+      <li><a href=" "> Shirts</a></li>
 </div>
 
 <div class="necklaces">
-
+      <li><a href=" "> Necklaces</a></li>
 </div>
 
 <div class="bracelets">
-
+      <li><a href=" "> Bracelets</a></li>
 </div>
 
 <div class="lightsticks">
-
+      <li><a href=" "> Lightsticks</a></li>
 </div>
 
 <div class="posters">
-
+      <li><a href=" "> Posters</a></li>
 </div>
   
 <div class="sold out">
-
+      <li><a href=" "> Soldout</a></li>
 </div>
   
 <div class="limited edition">
-
+      <li><a href=" "> Limited Edition</a></li>
 </div>
   </div>
 /* INSERT FOOTER HERE */
