--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Official Shop</title>
-<link href=" " rel="stylesheet" type="text/css"> /*INSERT CSS FILE HERE*/
+<link href="shop.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
