--- a/songs.html
+++ b/songs.html
@@ -44,6 +44,11 @@
 <div class="container">
   <img src="cover.jpg" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
+  <audio controls>
+  <source src=" " type="audio/ogg">  //////////////////////////////////////////////////////////*ADD AUDIO*/////////////////
+  <source src=" " type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 </div>
 
 
