--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="songs.html">Songs</a>
-  <a href="shop.html">Shop</a> /////////////////////////////////////////////////////////////////////////*Change occured here*/
+  <a href="shop.html">Shop</a> /*Change occured here*/
   <a href="events.html">Events</a>
-  <a href="help.html">Contact</a> /////////////////////////////////
+  <a href="help.html">Contact</a> /*change ends here*/
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
