--- a/songs.html
+++ b/songs.html
@@ -12,6 +12,11 @@
   max-width: 300px;
 }
 
+  .song2 {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+}
 /* image to responsive */
 .image {
   display: block;
@@ -39,6 +44,10 @@
 .container:hover .overlay {
   opacity: 1;
 }
+  
+.song2:hover .overlay {
+  opacity: 1;
+}
 </style>
 <body>
 <div class="container">
@@ -51,6 +60,15 @@ Your browser does not support the audio element.
 </audio>
 </div>
 
+<div class="song2">
+  <img src="cover.jpg" alt="song cover" class="image">
+  <div class="overlay">SONG/ALBUM NAME</div>
+  <audio controls>
+  <source src=" " type="audio/ogg">  //////////////////////////////////////////////////////////*ADD AUDIO*/////////////////
+  <source src=" " type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</div>
 
 
 </body>
