--- a/songs.html
+++ b/songs.html
@@ -11,7 +11,7 @@
   width: 50%;
   max-width: 300px;
 }
-
+/*Added trying to make another song box */
   .song2 {
   position: relative;
   width: 50%;
@@ -62,7 +62,6 @@ Your browser does not support the audio element.
 
 <div class="song2">
   <img src="cover.jpg" alt="song cover" class="image">
-  <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
   <source src=" " type="audio/ogg">  //////////////////////////////////////////////////////////*ADD AUDIO*/////////////////
   <source src=" " type="audio/mpeg">
