--- a/songs.html
+++ b/songs.html
@@ -55,8 +55,9 @@
   .bg-image {
   /* Full height */
   height: 50%; 
+  width: 50%;
   
-  /* Center and scale the image nicely */
+  /* Image to the right */
   background-position: right;
   background-repeat: no-repeat;
   background-size: cover;
