--- a/songs.html
+++ b/songs.html
@@ -31,7 +31,7 @@
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1; 
-  width: 100%;
+  width: 50%;
   transition: .5s ease;
   opacity:0;
   color: white;
@@ -95,7 +95,7 @@ Your browser does not support the audio element.
 </audio>
 </div>
 
-/*This is where the GIFS are added/changed */
+/*Gifs added */
 <div class="bg-image img1"></div>
 <div class="bg-image img2"></div>
 <div class="bg-image img3"></div>
