--- a/shop.html
+++ b/shop.html
@@ -3,8 +3,9 @@
 
   <div class="topnav" id="myTopnav">
   <a href="index.html">Home</a>
-  <a href="songs.html"class="active">Songs</a>
-  <a href="shop.html">Shop</a> 
+  <a href="bio.html">About</a>
+  <a href="songs.html">Songs</a>
+  <a href="shop.html"class="active">Shop</a> 
   <a href="events.html">Events</a>
   <a href="help.html">Contact</a> 
   <div class="dropdown">
@@ -17,7 +18,7 @@
       <a href="#">LOL I FELL LIKE WELL NEED THIS</a>
     </div>
   </div> 
-  <a href="bio.html">About</a>
+  
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <style>
