--- a/events.html
+++ b/events.html
@@ -3,10 +3,10 @@
 <head>
 <div class="topnav" id="myTopnav">
   <a href="index.html">Home</a>
-  <a href="bio.html"class="active">About</a>
+  <a href="bio.html">About</a>
   <a href="songs.html">Songs</a>
   <a href="shop.html">Shop</a> 
-  <a href="events.html">Events</a>
+  <a href="events.html"class="active">About</a>
   <a href="help.html">Contact</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
