--- a/help.html
+++ b/help.html
@@ -3,11 +3,11 @@
 <head>
 <div class="topnav" id="myTopnav">
   <a href="index.html">Home</a>
-  <a href="bio.html"class="active">About</a>
+  <a href="bio.html">About</a> 
   <a href="songs.html">Songs</a>
   <a href="shop.html">Shop</a> 
   <a href="events.html">Events</a>
-  <a href="help.html">Contact</a> 
+  <a href="help.html"class="active">About</a>
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
