--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
   <a href="bio.html">About</a>
   <a href="songs.html">Songs</a>
   <a href="shop.html">Shop</a> 
-  <a href="events.html"class="active">About</a>
+  <a href="events.html"class="active">Events</a>
   <a href="help.html">Contact</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
