--- a/help.html
+++ b/help.html
@@ -7,7 +7,7 @@
   <a href="songs.html">Songs</a>
   <a href="shop.html">Shop</a> 
   <a href="events.html">Events</a>
-  <a href="help.html"class="active">About</a>
+  <a href="help.html"class="active">Help</a>
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
