--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
   <a href="songs.html">Songs</a>
   <a href="shop.html">Shop</a> 
   <a href="events.html"class="active">Events</a>
-  <a href="help.html">Contact</a> 
+  <a href="help.html">Help</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
