--- a/songs.html
+++ b/songs.html
@@ -6,7 +6,7 @@
   <a href="songs.html"class="active">Songs</a>
   <a href="shop.html">Shop</a> 
   <a href="events.html">Events</a>
-  <a href="help.html">Contact</a> 
+  <a href="help.html">Help</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
