--- a/songs.html
+++ b/songs.html
@@ -12,7 +12,9 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">LOL I FELL LIKE WELL NEED THIS</a>
+      <a href="#">Work Log</a>
+      <a href="#">Copy Right Checklist</a>
+      <a href="#">LEAP Form</a>
     </div>
   </div> 
   
