--- a/songs.html
+++ b/songs.html
@@ -144,8 +144,8 @@
 /* image to responsive */
 .image {
   display: block;
-  width: 100%;
-  height: auto;
+  width: 50%;
+  height: 50%;
 }
 
 /* The overlay */
