--- a/songs.html
+++ b/songs.html
@@ -143,10 +143,9 @@
 }
 /* image to responsive */
 .image {
-  position:right;
   display: block;
   width: 50%;
-  height: 50%;
+  height: auto;
 }
 
 /* The overlay */
@@ -180,6 +179,7 @@
   .bg-image {
   /* Full height */
   height: 50%; 
+  position:right;
   width: 50%;
   
   /* Image to the right */
