--- a/songs.html
+++ b/songs.html
@@ -184,6 +184,7 @@
   /* Image to the right */
   background-position: right;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 /* Images used */
 .img1 { background-image: url(mickey.gif); }
