--- a/songs.html
+++ b/songs.html
@@ -182,7 +182,7 @@
   width: 50%;
   
   /* Image to the right */
-  background-position: right;
+  background-position: center;
   background-repeat: no-repeat;
   background-attatchment: fixed;
 }
