--- a/songs.html
+++ b/songs.html
@@ -183,6 +183,7 @@
   /* Image to the right */
   background-position: right;
   background-attatchment: fixed;
+  background-repeat: no-repeat;
 }
 /* Images used */
 .img1 { background-image: url(mickey.gif); }
