--- a/songs.html
+++ b/songs.html
@@ -179,6 +179,7 @@
   .bg-image {
   /* Full height */
   height: 50%;
+  width: 75%;
   
   /* Image to the right */
   background-position: right;
