--- a/songs.html
+++ b/songs.html
@@ -173,7 +173,10 @@
   opacity: 1;
 }
   
-  
+  /*can put artists' music vids or interviews from youtube*/
+  <iframe width="420" height="345" 
+  src="https://www.youtube.com/embed/xB5ceAruYrI">
+  </iframe>
   
 /*Code to position the gifs are */
   .bg-image {
