--- a/songs.html
+++ b/songs.html
@@ -173,11 +173,6 @@
   opacity: 1;
 }
   
-  /*can put artists' music vids or interviews from youtube*/
-  <iframe width="420" height="345" 
-  src="https://www.youtube.com/embed/xB5ceAruYrI">
-  </iframe>
-  
 /*Code to position the gifs are */
   .bg-image {
   /* Full height */
@@ -203,6 +198,14 @@
 
 
 <body>
+  
+    /*can put artists' music vids or interviews from youtube*/
+  <iframe
+  width: 50%;
+  height: 50%;
+  src="https://www.youtube.com/embed/79DijItQXMM">
+  </iframe>
+  
 <div class="container">
   <img src="cover.jpg" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
