--- a/songs.html
+++ b/songs.html
@@ -200,9 +200,7 @@
 <body>
   
     /*can put artists' music vids or interviews from youtube*/
-  <iframe
-  width: 50%;
-  height: 50%;
+  <iframe width="420" height="345"
   src="https://www.youtube.com/embed/79DijItQXMM">
   </iframe>
   
