--- a/songs.html
+++ b/songs.html
@@ -155,7 +155,7 @@
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1; 
-  width: 50%;
+  width: 40%;
   transition: .5s ease;
   opacity:0;
   color: white;
@@ -199,9 +199,8 @@
 
 <body>
   
-    /* can put artists' music vids or interviews from youtube */
   <iframe width="420" height="345"
-  src="https://www.youtube.com/embed/79DijItQXMM">
+  src="https://www.youtube.com/embed/rY0WxgSXdEE">
   </iframe>
   
 <div class="container">
