--- a/songs.html
+++ b/songs.html
@@ -199,10 +199,6 @@
 
 <body>
   
-  <iframe width="420" height="345"
-  src="https://www.youtube.com/embed/d-JBBNg8YKs">
-  </iframe>
-  
 <div class="container">
   <img src="cover.jpg" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
@@ -229,6 +225,20 @@ Your browser does not support the audio element.
 <div class="bg-image img4"></div>
 <div class="bg-image img5"></div>
 <div class="bg-image img6"></div>
+  
+  
+<footer>
+  width: 100%;
+	background-color: #222;
+	padding: 60px 0px;
+	list-style: none;
+	text-decoration: none;
+  
+  
+</footer>
+  
+  
+  
 </body>
 
 </html>
