--- a/songs.html
+++ b/songs.html
@@ -209,7 +209,28 @@ Your browser does not support the audio element.
 </audio>
 </div>
 
-<div class="song2">
+<div class="song3">
+  <img src="cover.jpg" alt="song cover" class="image">
+  <audio controls>
+  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
+  <source src=" " type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</div>
+
+
+<div class="song3">
+  <img src="cover.jpg" alt="song cover" class="image">
+  <audio controls>
+  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
+  <source src=" " type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</div>
+  
+  
+  
+<div class="song4">
   <img src="cover.jpg" alt="song cover" class="image">
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
@@ -219,16 +240,17 @@ Your browser does not support the audio element.
 </div>
 
   
+  
+  
 <div class="bg-image img1"></div>
 <div class="bg-image img2"></div>
 <div class="bg-image img3"></div>
 <div class="bg-image img4"></div>
 <div class="bg-image img5"></div>
-<div class="bg-image img6"></div>
+
   
   
-  
-  
+
   
 </body>
 
