--- a/songs.html
+++ b/songs.html
@@ -173,6 +173,20 @@
   opacity: 1;
 }
   
+  
+.song3:hover .overlay {
+  opacity: 1;
+}
+    
+.song4:hover .overlay {
+  opacity: 1;
+}
+  
+  
+.song5:hover .overlay {
+  opacity: 1;
+}
+  
 /*Code to position the gifs are */
   .bg-image {
   /* Full height */
@@ -219,7 +233,7 @@ Your browser does not support the audio element.
 </div>
 
 
-<div class="song3">
+<div class="song4">
   <img src="cover.jpg" alt="song cover" class="image">
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
@@ -230,7 +244,7 @@ Your browser does not support the audio element.
   
   
   
-<div class="song4">
+<div class="song5">
   <img src="cover.jpg" alt="song cover" class="image">
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
