--- a/songs.html
+++ b/songs.html
@@ -141,6 +141,7 @@
   width: 100%;
   max-width: 300px;
 }
+
 /* image to responsive */
 .image {
   display: block;
@@ -188,24 +189,6 @@
   opacity: 1;
 }
   
-/*Code to position the gifs are */
-  .bg-image {
-  /* Full height */
-  height: 50%;
-  width: 100%;
-  
-  /* Image to the right */
-  background-position: right;
-  background-attatchment: fixed;
-  background-repeat: no-repeat;
-}
-/* Images used */
-.img1 { background-image: url(mickey.gif); }
-.img2 { background-image: url("minnie.gif"); }
-.img3 { background-image: url("bird.gif"); }
-.img4 { background-image: url("dance.gif"); }
-.img5 { background-image: url("depression.gif"); }
-.img6 { background-image: url("trumpet.gif"); }
 
 </style>
 
@@ -214,7 +197,7 @@
 
 <body>
   
-<div class="container">
+<div class="song1">
   <img src="cover.jpg" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
@@ -255,13 +238,7 @@ Your browser does not support the audio element.
 </div>
 
   
-  
-  
-<div class="bg-image img1"></div>
-<div class="bg-image img2"></div>
-<div class="bg-image img3"></div>
-<div class="bg-image img4"></div>
-<div class="bg-image img5"></div>
+ 
 
   
   
