--- a/shop.html
+++ b/shop.html
@@ -189,6 +189,12 @@
       <li><a href=" "> Limited Edition</a></li>
 </div>
   </div>
+  
+  /*All the current code that actually does stuff begins here */
+  
+  
+  
+  
 /* INSERT FOOTER HERE */
 <footer>
   
