--- a/shop.html
+++ b/shop.html
@@ -191,7 +191,7 @@
   </div>
   
   /*All the current code that actually does stuff begins here */
-  
+ <button class="btn"><i class="fa fa-home">Cart</i></button>
   
   
   
@@ -208,7 +208,6 @@
   
  <li> <a href=" "> Home</a></li>
  
-   © SCITECH TSA 2019
    <a class="white-text position-center">Chapter ID: </a> /* INSERT THE CHAPTER ID HERE */
   </footer>
 </body>
