--- a/shop.html
+++ b/shop.html
@@ -191,7 +191,7 @@
   </div>
   
   /*All the current code that actually does stuff begins here */
- <button class="btn"><i class="fa fa-home">Cart</i></button>
+ <button class="btn"><i class="btn">Cart</i></button>
   
   
   
