--- a/help.html
+++ b/help.html
@@ -128,5 +128,21 @@
 }
  <body>
   
+  /*This is for the box that contains the photo*/
+   <div class="photo">
+  <img src="nature.jpg" alt="Concert of Her" style="width:100%;">
+  <div class="text-block">
+    <h4>Missing Tickets? Late Merchandise? Want A Sneak Peak at the Next Tour Dates? </h4>
+    <p>We can help you.</p>
+  </div>
+</div> 
+  
+  
+  
+  
+  
+  
+  
+  
  </body>
  </html>
