--- a/help.html
+++ b/help.html
@@ -126,12 +126,31 @@
     text-align: left;
   }
 }
+  
+  /*Where the css for the information boxes goes*/
+  
+   /* Container holding the image and the text */
+.photo {
+  position: relative;
+}
+
+/* Bottom right text */
+.text-block1 {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+} 
  <body>
   
   /*This is for the box that contains the photo*/
    <div class="photo">
-  <img src="nature.jpg" alt="Concert of Her" style="width:100%;">
-  <div class="text-block">
+  <img src="help2.jpg" alt="Concert of Her" style="width:100%;">
+  <div class="text-block1">
     <h4>Missing Tickets? Late Merchandise? Want A Sneak Peak at the Next Tour Dates? </h4>
     <p>We can help you.</p>
   </div>
@@ -139,6 +158,7 @@
   
   
   
+
   
   
   
