--- a/help.html
+++ b/help.html
@@ -146,7 +146,7 @@
   padding-right: 20px;
 } 
  <body>
-  
+ 
   /*This is for the box that contains the photo*/
    <div class="photo">
   <img src="help2.jpg" alt="Concert of Her" style="width:100%;">
@@ -157,9 +157,11 @@
 </div> 
   
   
-  
-
-  
+  <img src="help2.jpg" alt="Concert of Her" style="width:100%;">
+  <div class="text-block1">
+    <h4>Missing Tickets? Late Merchandise? Want A Sneak Peak at the Next Tour Dates? </h4>
+    <p>We can help you.</p>
+  </div>
   
   
   
