--- a/help.html
+++ b/help.html
@@ -149,7 +149,7 @@
  
   /*This is for the box that contains the photo*/
    <div class="photo">
-  <img src="help2.jpg" alt="Concert of Her" style="width:100%;">
+  <img src="/Photos Used/help2.jpg" alt="Concert of Her" style="width:100%;">
   <div class="text-block1">
     <h4>Missing Tickets? Late Merchandise? Want A Sneak Peak at the Next Tour Dates? </h4>
     <p>We can help you.</p>
@@ -157,13 +157,7 @@
 </div> 
   
   
-  <img src="help2.jpg" alt="Concert of Her" style="width:100%;">
-  <div class="text-block1">
-    <h4>Missing Tickets? Late Merchandise? Want A Sneak Peak at the Next Tour Dates? </h4>
-    <p>We can help you.</p>
-  </div>
-  
-  
+ 
   
   
  </body>
