--- a/help.html
+++ b/help.html
@@ -128,31 +128,11 @@
 }
   
   /*Where the css for the information boxes goes*/
-  
-   /* Container holding the image and the text */
 
-
-/* Bottom right text */
-.text-block1 {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding-left: 20px;
-  padding-right: 20px;
-} 
  <body>
 
-  <img src="/Photos Used/help2.jpg" alt="Concert of Her" style="width:100%;">
-  <div class="text-block1">
-    <h4>Missing Tickets? Late Merchandise? Want A Sneak Peak at the Next Tour Dates? </h4>
-    <p>We can help you.</p>
-</div> 
-  
-  
- 
+<img scr="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!">
+
   
   
  </body>
