--- a/help.html
+++ b/help.html
@@ -128,10 +128,31 @@
 }
   
   /*Where the css for the information boxes goes*/
+ /* Container holding the image and the text */
+.container {
+  position: relative;
+}
 
+/* Bottom right text */
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+} 
+  </style>
  <body>
 
-<img scr="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!">
+ <div class="container">
+  <img src="nature.jpg" alt="Norway" style="width:100%;">
+  <div class="text-block">
+    <h4>Nature</h4>
+    <p>What a beautiful sunrise</p>
+  </div>
+</div> 
 
   
   
