--- a/help.html
+++ b/help.html
@@ -147,10 +147,10 @@
  <body>
 
  <div class="container">
-  <img src="nature.jpg" alt="Norway" style="width:100%;">
+  <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
-    <h4>Nature</h4>
-    <p>What a beautiful sunrise</p>
+    <h4>Missing Tickets? Don't Know How to Order Merchandise?</h4>
+    <p>We can help.</p>
   </div>
 </div> 
 
