--- a/help.html
+++ b/help.html
@@ -137,7 +137,7 @@
 .text-block {
   position: absolute;
   top: 50%;
-  width: 100%;
+  width: 50%;
   text-align:center;
   background-color: black;
   color: white;
@@ -148,7 +148,7 @@
  <body>
 
  <div class="container">
-  <img src="ScitechWebmaster.github.io/Photos Used/help.jpg" alt="Her Concert!" style="width:100%;">
+  <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
     <h4>Missing Tickets? Don't Know How to Order Merchandise?</h4>
     <p>We can help.</p>
